syntax = "proto3";

package protocol;

option java_package = "org.tron.protos.contract"; //Specify the name of the package that generated the Java file
//option java_outer_classname = "AccountCreateContract"; //Specify the class name of the generated Java file
option go_package = "github.com/tronprotocol/grpc-gateway/core";

import "core/Tron.proto";

message AccountCreateContract {
    bytes owner_address = 1;
    bytes account_address = 2;
    AccountType type = 3;
}

message AccountPermissionUpdateContract {
    bytes owner_address = 1;
    Permission owner = 2; //Empty is invalidate
    Permission witness = 3; //Can be empty
    repeated Permission actives = 4; //Empty is invalidate
}

// Update account name. Account name is not unique now.
message AccountUpdateContract {
    bytes account_name = 1;
    bytes owner_address = 2;
}

// Set account id if the account has no id. Account id is unique and case insensitive.
message SetAccountIdContract {
    bytes account_id = 1;
    bytes owner_address = 2;
}
